--- a/.gitignore
+++ b/.gitignore
@@ -3,39 +3,14 @@ __pycache__/
 *.py[cod]
 *$py.class
 
-# C extensions
-*.so
-
 # Distribution / packaging
-.Python
-build/
-develop-eggs/
 dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
+build/
+dsaria.egg-info/
 *.egg-info/
-.installed.cfg
 *.egg
-
-# Pipenv environment files
-# If you want to exclude the virtualenv created outside the project folder
-# (pipenv creates it in a centralized place by default, so usually safe to not ignore)
-# But if you have a local venv folder, ignore it:
-venv/
-env/
-ENV/
-env.bak/
-venv.bak/
-
-# PyInstaller
-*.manifest
-*.spec
+*.whl
+*.tar.gz
 
 # Installer logs
 pip-log.txt
@@ -48,62 +23,18 @@ htmlcov/
 .coverage
 .coverage.*
 .cache
+.pytest_cache/
 nosetests.xml
 coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
 
-# Translations
-*.mo
-*.pot
+# Virtual environment folder
+.venv/
 
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-
-# Flask stuff:
-instance/
-.webassets-cache
-
-# Scrapy stuff:
-.scrapy
-
-# Sphinx documentation
-docs/_build/
-
-# PyCharm
+# Editor directories and files
+.vscode/
 .idea/
 
-# VS Code
-.vscode/
-
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Pyre type checker
-.pyre/
-
-# profiling data
-.prof
-
-# Jupyter Notebook checkpoints
-.ipynb_checkpoints
-
-# pyenv
-.python-version
-
-# pipenv
-Pipfile.lock
-
-# VS Code settings folder
-.vscode/
-
-# MacOS
+# MacOS system files
 .DS_Store
 
 # Logs
