--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,13 +4,13 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "dsaria"
-version = "1.0.0"
+version = "1.1.0"
 description = "A simple Python library for data structures and algorithms."
 authors = [
     { name = "Rahil Shaik", email = "rahil15973@gmail.com" }
 ]
-readme = "README.md"
-license = { text = "MIT" }
+readme = "README_PYPI.md"
+license = { file = "LICENSE" }
 requires-python = ">=3.9"
 
 [tool.setuptools.packages.find]
