--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "dsaria"
-version = "1.2.0"
+version = "1.3.0"
 description = "A simple Python library for data structures and algorithms."
 authors = [
     { name = "Rahil Shaik", email = "rahil15973@gmail.com" }
@@ -12,6 +12,10 @@ authors = [
 readme = "README_PYPI.md"
 license = { file = "LICENSE" }
 requires-python = ">=3.9"
+
+[project.urls]
+Homepage = "https://github.com/rahils1/dsaria"
+BugTracker = "https://github.com/rahilshaik/dsaria/issues"
 
 [tool.setuptools.packages.find]
 where = ["."]
